# ProgettoPACS

./: .gitignore  CMakeLists.txt  Doxyfile  FNN.hpp  Gradient_Descent.cpp  Gradient_Descent.hpp  LIBTORCH_PINN_GUIDE.md  Losses.hpp  Model.hpp  Optimizer.hpp  PINNLoss.hpp  ParaflowS.cpp  ParaflowS.hpp  Pde.cpp  Pde.hpp  Poisson_Neumann_1d.py  README.md  main.cpp  note.md  pde.py  pinn_torch.hpp  problem_settings.py  test.py  torch_example.cpp
boundary_condition/: Boundary_Condition.cpp  Boundary_Condition.hpp  Dirichlet_BC.cpp  Dirichlet_BC.hpp
docs/: Boundary__Condition_8cpp.html  Boundary__Condition_8cpp__incl.map  Boundary__Condition_8cpp__incl.md5  Boundary__Condition_8hpp.html  Boundary__Condition_8hpp__dep__incl.map  Boundary__Condition_8hpp__dep__incl.md5  Boundary__Condition_8hpp__incl.map  Boundary__Condition_8hpp__incl.md5  Boundary__Condition_8hpp_source.html  Differential__Operators_8hpp.html  Differential__Operators_8hpp__incl.map  Differential__Operators_8hpp__incl.md5  Differential__Operators_8hpp_source.html  Dirichlet__BC_8cpp.html  Dirichlet__BC_8cpp__incl.map  Dirichlet__BC_8cpp__incl.md5  Dirichlet__BC_8hpp.html  Dirichlet__BC_8hpp__dep__incl.map  Dirichlet__BC_8hpp__dep__incl.md5  Dirichlet__BC_8hpp__incl.map  Dirichlet__BC_8hpp__incl.md5  Dirichlet__BC_8hpp_source.html  FNN_8hpp.html  FNN_8hpp__incl.map  FNN_8hpp__incl.md5  FNN_8hpp_source.html  Gradient__Descent_8hpp.html  Gradient__Descent_8hpp__dep__incl.map  Gradient__Descent_8hpp__dep__incl.md5  Gradient__Descent_8hpp__incl.map  Gradient__Descent_8hpp__incl.md5  Gradient__Descent_8hpp_source.html  Losses_8hpp.html  Losses_8hpp__dep__incl.map  Losses_8hpp__dep__incl.md5  Losses_8hpp__incl.map  Losses_8hpp__incl.md5  Losses_8hpp_source.html  Model_8hpp.html  Model_8hpp__incl.map  (+108 more)
docs/search/: all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  enums_1.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  functions_9.js  functions_d.js  functions_e.js  (+11 more)
layer/: Dense.hpp  Layer.cpp  Layer.hpp  Linear_Layer.hpp  Param.cpp  Param.hpp  Relu_Layer.hpp  Sigmoid_Layer.hpp  Tanh_Layer.hpp  activation.hpp
operator/: Differential_Operators.hpp
optimizer/: Gradient_Descent.cpp  Gradient_Descent.hpp  Optimizer.hpp  ParaflowS.hpp
python_extention/: model.py
python_implementation/: Copy_files_to track.sh  Copy_files_to_track.sh  Helmholtz_Dirichlet_2d.py  Higham_Test.py  Higham_test.py  Poisson_Lshape.py  Poisson_Neumann_1d.py  README.md  Smorzato_Test.py  Smorzato_test.py  callbacks.py  environment.yml  install.sh  model.py  optimizers.py  paraflow.py  pde.py  sincos.py  test.md
python_src/: Poisson_Lshape.py  README.md  install.sh  model.py  optimizers.py
src/: CMakeLists.txt  Doxyfile  FNN.hpp  Losses.hpp  Model.hpp  PoissonLshape.cpp  README.md  main.cpp  parameter_test.cpp  test.cpp
src/boundary_condition/: Boundary_Condition.cpp  Boundary_Condition.hpp  Dirichlet_BC.cpp  Dirichlet_BC.hpp
src/docs/: Boundary__Condition_8cpp.html  Boundary__Condition_8cpp__incl.map  Boundary__Condition_8cpp__incl.md5  Boundary__Condition_8hpp.html  Boundary__Condition_8hpp__dep__incl.map  Boundary__Condition_8hpp__dep__incl.md5  Boundary__Condition_8hpp__incl.map  Boundary__Condition_8hpp__incl.md5  Boundary__Condition_8hpp_source.html  Differential__Operators_8hpp.html  Differential__Operators_8hpp__incl.map  Differential__Operators_8hpp__incl.md5  Differential__Operators_8hpp_source.html  Dirichlet__BC_8cpp.html  Dirichlet__BC_8cpp__incl.map  Dirichlet__BC_8cpp__incl.md5  Dirichlet__BC_8hpp.html  Dirichlet__BC_8hpp__dep__incl.map  Dirichlet__BC_8hpp__dep__incl.md5  Dirichlet__BC_8hpp__incl.map  Dirichlet__BC_8hpp__incl.md5  Dirichlet__BC_8hpp_source.html  FNN_8hpp.html  FNN_8hpp__incl.map  FNN_8hpp__incl.md5  FNN_8hpp_source.html  Gradient__Descent_8hpp.html  Gradient__Descent_8hpp__dep__incl.map  Gradient__Descent_8hpp__dep__incl.md5  Gradient__Descent_8hpp__incl.map  Gradient__Descent_8hpp__incl.md5  Gradient__Descent_8hpp_source.html  Losses_8hpp.html  Losses_8hpp__dep__incl.map  Losses_8hpp__dep__incl.md5  Losses_8hpp__incl.map  Losses_8hpp__incl.md5  Losses_8hpp_source.html  Model_8hpp.html  Model_8hpp__incl.map  (+71 more)
src/docs/search/: all_0.js  all_4.js  all_5.js  all_6.js  all_7.js  all_b.js  all_d.js  classes_0.js  classes_6.js  files_1.js  files_4.js  files_7.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_2.js  typedefs_1.js  variables_0.js
src/operator/: Differential_Operators.hpp
src/optimizer/: Gradient_Descent.hpp  Optimizer.hpp  ParaflowS.hpp
src/pde/: Pde.cpp  Pde.hpp
